test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/stdout.snap
---
source: test/src/snapshot/mod.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error --experimental error_type
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling library panic_expression_arg_not_error (test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error)
warning
  --> test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/src/main.sw:21:45
   |
19 | }
20 | 
21 | pub fn panic_arg_generic_not_constrained<T>(t_unconstrained: T) {
   |                                             --------------- This declaration is never used.
22 |     panic t_unconstrained;
23 | }
   |
____

warning
  --> test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/src/main.sw:25:40
   |
23 | }
24 | 
25 | pub fn panic_arg_generic_abi_encode<T>(t_abi_encode: T) where T: AbiEncode {
   |                                        ------------ This declaration is never used.
26 |     panic t_abi_encode;
27 | }
   |
____

warning
  --> test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/src/main.sw:29:34
   |
27 | }
28 | 
29 | pub fn panic_arg_generic_enum<T>(t_enum: T) where T: Enum {
   |                                  ------ This declaration is never used.
30 |     panic t_enum;
31 | }
   |
____

error: Panic expression arguments must implement "Error" marker trait
 --> test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/src/main.sw:4:11
  |
...
4 |     panic 42u64;
  |           ^^^^^ This expression has type "u64", which does not implement "std::marker::Error" trait.
  |
  = help: Panic expression accepts only arguments that implement "std::marker::Error" trait.
  = help:  
  = help: "Error" marker trait is automatically implemented by the compiler for the unit type `()`,
  = help: string slices, and enums annotated with the `#[error_type]` attribute.
____

error: Panic expression arguments must implement "Error" marker trait
  --> test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/src/main.sw:10:11
   |
...
10 |     panic S { };
   |           ^^^^^ This expression has type "S", which does not implement "std::marker::Error" trait.
   |
   = help: Panic expression accepts only arguments that implement "std::marker::Error" trait.
   = help:  
   = help: "Error" marker trait is automatically implemented by the compiler for the unit type `()`,
   = help: string slices, and enums annotated with the `#[error_type]` attribute.
____

error: Panic expression arguments must implement "Error" marker trait
  --> test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/src/main.sw:18:11
   |
...
18 |     panic EnumNotErrorEnum::A;
   |           ^^^^^^^^^^^^^^^^^^^ This expression has type "EnumNotErrorEnum", which does not implement "std::marker::Error" trait.
   |
   = help: Panic expression accepts only arguments that implement "std::marker::Error" trait.
   = help:  
   = help: "Error" marker trait is automatically implemented by the compiler for the unit type `()`,
   = help: string slices, and enums annotated with the `#[error_type]` attribute.
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/src/main.sw:22:11
   |
20 | 
21 | pub fn panic_arg_generic_not_constrained<T>(t_unconstrained: T) {
22 |     panic t_unconstrained;
   |           ^^^^^^^^^^^^^^^ Trait "AbiEncode" is not implemented for type "T".
23 | }
24 | 
   |
____

error: Panic expression arguments must implement "Error" marker trait
  --> test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/src/main.sw:22:11
   |
...
22 |     panic t_unconstrained;
   |           ^^^^^^^^^^^^^^^ This expression has type "unknown", which does not implement "std::marker::Error" trait.
   |
   = help: Panic expression accepts only arguments that implement "std::marker::Error" trait.
   = help:  
   = help: "Error" marker trait is automatically implemented by the compiler for the unit type `()`,
   = help: string slices, and enums annotated with the `#[error_type]` attribute.
____

error: Panic expression arguments must implement "Error" marker trait
  --> test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/src/main.sw:26:11
   |
...
26 |     panic t_abi_encode;
   |           ^^^^^^^^^^^^ This expression has type "T", which does not implement "std::marker::Error" trait.
   |
   = help: Panic expression accepts only arguments that implement "std::marker::Error" trait.
   = help:  
   = help: "Error" marker trait is automatically implemented by the compiler for the unit type `()`,
   = help: string slices, and enums annotated with the `#[error_type]` attribute.
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/src/main.sw:30:11
   |
28 | 
29 | pub fn panic_arg_generic_enum<T>(t_enum: T) where T: Enum {
30 |     panic t_enum;
   |           ^^^^^^ Trait "AbiEncode" is not implemented for type "T".
31 | }
   |
____

error: Panic expression arguments must implement "Error" marker trait
  --> test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/src/main.sw:30:11
   |
...
30 |     panic t_enum;
   |           ^^^^^^ This expression has type "unknown", which does not implement "std::marker::Error" trait.
   |
   = help: Panic expression accepts only arguments that implement "std::marker::Error" trait.
   = help:  
   = help: "Error" marker trait is automatically implemented by the compiler for the unit type `()`,
   = help: string slices, and enums annotated with the `#[error_type]` attribute.
____

  Aborting due to 8 errors.
error: Failed to compile panic_expression_arg_not_error

> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling library panic_expression_arg_not_error (test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error)
warning
  --> test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/src/main.sw:21:45
   |
19 | }
20 | 
21 | pub fn panic_arg_generic_not_constrained<T>(t_unconstrained: T) {
   |                                             --------------- This declaration is never used.
22 |     panic t_unconstrained;
23 | }
   |
____

warning
  --> test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/src/main.sw:25:40
   |
23 | }
24 | 
25 | pub fn panic_arg_generic_abi_encode<T>(t_abi_encode: T) where T: AbiEncode {
   |                                        ------------ This declaration is never used.
26 |     panic t_abi_encode;
27 | }
   |
____

error
 --> test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/src/main.sw:4:5
  |
2 | 
3 | pub fn panic_arg_u64() {
4 |     panic 42u64;
  |     ^^^^^^^^^^^ This needs "error_type" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6765.
5 | }
6 | 
  |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/src/main.sw:10:5
   |
 8 | 
 9 | pub fn panic_arg_struct() {
10 |     panic S { };
   |     ^^^^^^^^^^^ This needs "error_type" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6765.
11 | }
12 | 
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/src/main.sw:18:5
   |
16 | 
17 | pub fn panic_arg_enum_not_error_enum() {
18 |     panic EnumNotErrorEnum::A;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ This needs "error_type" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6765.
19 | }
20 | 
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/src/main.sw:22:5
   |
20 | 
21 | pub fn panic_arg_generic_not_constrained<T>(t_unconstrained: T) {
22 |     panic t_unconstrained;
   |     ^^^^^^^^^^^^^^^^^^^^^ This needs "error_type" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6765.
23 | }
24 | 
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/src/main.sw:26:5
   |
24 | 
25 | pub fn panic_arg_generic_abi_encode<T>(t_abi_encode: T) where T: AbiEncode {
26 |     panic t_abi_encode;
   |     ^^^^^^^^^^^^^^^^^^ This needs "error_type" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6765.
27 | }
28 | 
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/src/main.sw:29:54
   |
27 | }
28 | 
29 | pub fn panic_arg_generic_enum<T>(t_enum: T) where T: Enum {
   |                                                      ^^^^ Could not find symbol "Enum" in this scope.
30 |     panic t_enum;
31 | }
   |
____

error
  --> test/src/e2e_vm_tests/test_programs/should_fail/panic_expression_arg_not_error/src/main.sw:29:54
   |
27 | }
28 | 
29 | pub fn panic_arg_generic_enum<T>(t_enum: T) where T: Enum {
   |                                                      ^^^^ Cannot find trait "panic_expression_arg_not_error::Enum" in this scope.
30 |     panic t_enum;
31 | }
   |
____

  Aborting due to 7 errors.
error: Failed to compile panic_expression_arg_not_error
